--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2273,9 +2273,18 @@ button,
     padding-top: 0; }
 
 
-  .Javascript-icon {
+  /* .Javascript-icon {
     margin-top: 5px;
+  } */
+
+  .features {
+    display: flex;
+    justify-content: space-around;
   }
+
+  /* .icon {
+
+  } */
 
 
 
