updating text ad adding margin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2273,18 +2273,9 @@ button,
     padding-top: 0; }
 
 
-  /* .Javascript-icon {
+  .Javascript-Logo {
     margin-top: 5px;
-  } */
-
-  .features {
-    display: flex;
-    justify-content: space-around;
   }
-
-  /* .icon {
-
-  } */
 
 
 
