changing blog display

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2288,5 +2288,15 @@ button,
   max-height: 320px;
 }
 
+.blogs {
+  display: flex;
+  justify-content: center;
+  max-width: 580px;
+}
+
+.blogs > article {
+  flex: 1;
+}
+
 
   
