--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2113,7 +2113,8 @@ button,
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
-  display: flex; }
+  display: flex;
+  max-height: 600px; }
   #banner h1 {
     margin-top: -0.125em; }
   #banner .content {
@@ -2139,7 +2140,7 @@ button,
     margin: 0 0 2em 4em;
     width: 50%; }
     #banner .image img {
-      height: 75%;
+      height: 65%;
       -moz-object-fit: cover;
       -webkit-object-fit: cover;
       -ms-object-fit: cover;
