--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2286,108 +2286,7 @@ button,
 }
 
 .blogs {
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
   display: flex;
   justify-content: center;
-  margin: 0 0 2em -6em;
-  width: 75%; }
-  .blogs article {
-    -moz-flex-grow: 0;
-    -webkit-flex-grow: 0;
-    -ms-flex-grow: 0;
-    flex-grow: 0;
-    -moz-flex-shrink: 1;
-    -webkit-flex-shrink: 1;
-    -ms-flex-shrink: 1;
-    flex-shrink: 1;
-    margin: 0 0 6em 6em;
-    position: relative;
-    width: 100%; }
-    .blogs article:before {
-      background: rgba(210, 215, 217, 0.75);
-      content: '';
-      display: block;
-      height: calc(100% + 6em);
-      left: -3em;
-      position: absolute;
-      top: 0;
-      width: 1px; }
-    .blogs article:after {
-      background: rgba(210, 215, 217, 0.75);
-      bottom: -3em;
-      content: '';
-      display: block;
-      height: 1px;
-      position: absolute;
-      right: 0;
-      width: calc(100% + 6em); }
-    .blogs article > :last-child {
-      margin-bottom: 0; }
-    .blogs article .image {
-      display: block;
-      margin: 0 0 2em 0; }
-      .blogs article .image img {
-        display: block;
-        width: 100%; }
-  @media screen and (min-width: 1681px) {
-    .blogs article:nth-child(3n + 1):before {
-      display: none; }
-    .blogs article:nth-child(3n + 1):after {
-      width: 100%; }
-    .blogs article:nth-last-child(1), .blogs article:nth-last-child(2), .blogs article:nth-last-child(3) {
-      margin-bottom: 0; }
-      .blogs article:nth-last-child(1):before, .blogs article:nth-last-child(2):before, .blogs article:nth-last-child(3):before {
-        height: 100%; }
-      .blogs article:nth-last-child(1):after, .blogs article:nth-last-child(2):after, .blogs article:nth-last-child(3):after {
-        display: none; } }
-  @media screen and (max-width: 1680px) {
-    .blogs article {
-      width: calc(50% - 6em); }
-      .blogs article:nth-last-child(3) {
-        margin-bottom: 6em; } }
-  @media screen and (min-width: 481px) and (max-width: 1680px) {
-    .blogs article:nth-child(2n + 1):before {
-      display: none; }
-    .poblogssts article:nth-child(2n + 1):after {
-      width: 100%; }
-    .blogs article:nth-last-child(1), .blogs article:nth-last-child(2) {
-      margin-bottom: 0; }
-      .blogs article:nth-last-child(1):before, .blogs article:nth-last-child(2):before {
-        height: 100%; }
-      .blogs article:nth-last-child(1):after, .blogs article:nth-last-child(2):after {
-        display: none; } }
-  @media screen and (max-width: 736px) {
-    .blogs {
-      margin: 0 0 2em -4.5em;
-      width: calc(100% + 4.5em); }
-      .blogs article {
-        margin: 0 0 4.5em 4.5em;
-        width: calc(50% - 4.5em); }
-        .blogs article:before {
-          height: calc(100% + 4.5em);
-          left: -2.25em; }
-        .blogs article:after {
-          bottom: -2.25em;
-          width: calc(100% + 4.5em); }
-        .blogs article:nth-last-child(3) {
-          margin-bottom: 4.5em; } }
-  @media screen and (max-width: 480px) {
-    .blogs {
-      margin: 0 0 2em 0;
-      width: 100%; }
-      .blogs article {
-        margin: 0 0 4.5em 0;
-        width: 100%; }
-        .blogs article:before {
-          display: none; }
-        .blogs article:after {
-          width: 100%; }
-        .blogs article:last-child {
-          margin-bottom: 0; }
-          .blogs article:last-child:after {
-            display: none; } }
-
-
-  
+  padding: 40px 0px;
+}
