--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2284,10 +2284,8 @@ button,
 }
 
 .blogs {
+  flex-wrap: wrap;
+  flex: 1;
   display: flex;
   justify-content: center;
-}
-
-.blog {
-  flex: 1;
 }
