changing menu styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2281,6 +2281,9 @@ button,
 
 .get-in-touch-section {
   position: fixed;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .blogs {
