adjusting width of menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2281,9 +2281,7 @@ button,
 
 .get-in-touch-section {
   position: fixed;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  max-width: fit-content;
 }
 
 .blogs {
