realigning side bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1936,7 +1936,9 @@ button,
     font-size: 1.38889em; }
   #sidebar > .inner {
     padding: 2.22222em 2.22222em 2.44444em 2.22222em ;
-    position: relative;
+    /* position: relative; */
+    display: flex;
+    align-items: flex-start;
     width: 26em; }
     #sidebar > .inner > * {
       border-bottom: solid 2px rgba(210, 215, 217, 0.75);
@@ -2281,7 +2283,7 @@ button,
 
 .get-in-touch-section {
   position: sticky;
-  top: 0px;
+  top: 0;
 }
 
 .blogs {
